# abcd

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LIVRAISON_CARTRONIC.md  Procfile  README.md  README_APPELS_VOIP.md  README_CORRECTIONS_CRITIQUES.md  README_DEPLOY.md  README_DOCUMENTS_STOCKAGE_BD.md  README_MARKETPLACE_MOBILE_API.md  README_MERGE.md  README_SYMBIOSE_MARKETPLACE_ADMIN.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
apps/admin_panel/: admin.py  apps.py  debug_views.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/admin_panel/migrations/: 0001_initial.py  0002_rename_notif_destinataire_lu_idx_admin_notif_destina_cc53c7_idx_and_more.py
apps/core/: models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/marketplace/: admin.py  apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/marketplace/migrations/: 0001_initial.py  0002_avis_alter_commande_options_and_more.py  0003_marketplacearticletype.py  0004_marketplace_mobile_api.py  0005_marketplace_users_partner_applications.py
apps/marketplace/tests/: test_services.py
apps/payments/: models.py  serializers.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_rename_payment_tr_reservat_67a6c8_idx_payment_tra_reserva_ca8b2b_idx_and_more.py  0003_payment_international_and_cash.py
apps/reservations/: __init__.py  admin.py  apps.py  consumers.py  models.py  permissions.py  pricing.py  routing.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/reservations/migrations/: 0001_initial.py  0002_alter_evaluation_options_alter_reservation_options_and_more.py  (+4 more)
apps/users/: __init__.py  admin.py  apps.py  authentication.py  managers.py  models.py  permissions.py  serializers.py  services.py  signals.py  throttles.py  urls.py  views.py
apps/vehicles/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
apps/voice_calls/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
config/: asgi.py  exception_handler.py  media_views.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  geospatial.py  prod.py
(+25 files in other folders)
