[project]
name = "willy-project"
version = "0.1.0"
description = "Willy backend API"
authors = [
    {name = "Bikoun Ayibodo Steve William", email = "bikounayibodo@et.esiea.fr"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "django (>=5.2.10,<5.3.0)",
    "djangorestframework (>=3.15.2,<3.16.0)",
    "djangorestframework-gis (>=1.1,<1.2)",
    "psycopg[binary] (>=3.1,<4.0)",
    "dj-database-url (>=2.2.0,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework-simplejwt (>=5.3.1,<5.4.0)",
    "django-filter (>=24.3,<25.0)",
    "drf-yasg (>=1.21.8,<2.0.0)",
    "pillow (>=11.0.0,<13.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "channels (>=4.2.0,<5.0.0)",
    "channels-redis (>=4.2.1,<5.0.0)",
    "daphne (>=4.1.2,<5.0.0)",
    "drf-spectacular (>=0.27.2,<0.28.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "haversine (>=2.9.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.0,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
